--- a/style.css
+++ b/style.css
@@ -1,1 +1,21 @@
-.container {}
+.container {
+    display: flex;
+    flex-direction: column;
+    background-image: url(https://images.pexels.com/photos/1118873/pexels-photo-1118873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-repeat: no-repeat;
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+}
+
+* li {
+    display: flex;
+    justify-content: flex-start;
+    padding-top: 1rem;
+    color: white;
+    font-size: larger;
+}
+
+ul {
+    list-style: none;
+}
